# mlir-playground

./: .gitattributes  .gitignore  .lfsconfig  .prettierignore  README.md  jest.config.js  netlify.toml  next.config.js  package-lock.json  package.json  prepare.sh  prepare.ts  tsconfig.json
.github/: build-img.yml
.github/workflows/: build-and-deploy.yml  build-img.yml  build-site.yml  build-test-deploy.yml  build.yml  check-format.yml  cleanup-previews.yml  cleanup-stale-user-content.yml  deploy-dev.yml  deploy-prod.yml  deploy-site.yml  release.yml  run-tests.yml
.netlify/: state.json
components/Facilities/: CppPass.ts  CppPattern.ts  FacilitySelector.ts  MlirOpt.ts  PlaygroundFacility.ts  ToyChapter.ts
components/MlirTblgen/: index.ts
components/Presets/: CppPass.ts  CppPattern.ts  MlirOpt.ts  PlaygroundPreset.ts  PresetFactory.ts  TableGen.ts  ToyChapter.ts
components/Sharing/: ImportExport.test.ts  ImportExport.ts
components/Sharing/schema/: 0.0.1.json  0.0.1.ts
components/State/: ImportExport.test.ts  ImportExport.ts  StageState.ts
components/Toy/: index.js  index.ts
components/Toy/wasm/: .gitignore
components/UI/: constants.tsx  labeledEditor.tsx  navbar.tsx  shareModal.tsx
components/Utils/: Events.ts  Result.ts  RunStatus.ts
components/WasmCompiler/: index.js  index.ts  template.js  worker.js  worker.ts  workerManager.ts
components/WasmCompiler/wasm/: clang.mjs  clang.wasm  lld.wasm  wasm-ld.mjs
components/WasmFetcher/: index.js  index.ts
cpp/: README.md  build-compiler-in-docker.sh  build-compiler.sh  build-docker.sh  build-image.sh  build-in-docker.sh  build.sh  clang-wasm-image.txt  copy-out.sh  create_mlir-wasm.sh  export-wasm.sh  run-image.sh
cpp/datagen/: package-libs.sh
cpp/docker/: Dockerfile  common.sh  install.sh  setup.sh
cpp/docker/patches/: mlir.patch
cpp/mlir/: package-libs.sh  test-build.sh
cpp/mlir/mlir-opt/: compile.sh  custom-mlir-opt.cpp  link.sh
cpp/patches/: llvm.patch  mlir.patch  toyc7-cmake.patch
cpp/toy/: README.md  build-toy-in-docker.sh  build-toy.sh
cpp/toy/patches/: toyc7.patch
cpp/toy/shell/: index.html
cpp/wasmgen/: package-all.sh  package-libs.sh
cpp/wasmgen/template/: CMakeLists.txt  compile-template.sh  template.cpp
docker/: Makefile  appliance.dockerfile  appliance.sh
functions/: README.md
functions/api/: _middleware.ts  createShareLink.ts
pages/: _app.tsx  index.tsx  playground.tsx
public/: onlyincludes.data  onlylibs.data
schema/: 0.0.1.ts
schema/types/: 0.0.1.d.ts
scripts/: build_and_deploy.sh  delete_preview_deployments.ts  publish_to_cf_pages.sh  remove_from_b2.sh  remove_stale_user_content.ts  set_r2_cors.ts  upload_to_b2.sh  upload_wasm_to_b2.sh
styles/: Home.module.css
workers/ugc-manager/: .gitignore  package-lock.json  package.json  wrangler.toml
workers/ugc-manager/shared/schema/: validation.test.ts  validation.ts
workers/ugc-manager/shared/schema/raw/: 0.0.1.json
workers/ugc-manager/src/: index.ts
