cmake_minimum_required(VERSION 3.22)
project(MlirOptTemplate)

find_package(MLIR REQUIRED CONFIG)
message(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

set(LLVM_RUNTIME_OUTPUT_INTDIR ${CMAKE_BINARY_DIR}/bin)
set(LLVM_LIBRARY_OUTPUT_INTDIR ${CMAKE_BINARY_DIR}/lib)
set(MLIR_BINARY_DIR ${CMAKE_BINARY_DIR})

list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
include(TableGen)
include(AddLLVM)
include(AddMLIR)
include(HandleLLVMOptions)

include_directories(${LLVM_INCLUDE_DIRS})
include_directories(${MLIR_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_BINARY_DIR}/include)
link_directories(${LLVM_BUILD_LIBRARY_DIR})
add_definitions(${LLVM_DEFINITIONS})

add_executable(MlirOptTemplate template.cpp)
target_link_libraries(MlirOptTemplate PUBLIC
    LLVMAggressiveInstCombine
    LLVMAnalysis
    LLVMAsmParser
    LLVMAsmPrinter
    LLVMBinaryFormat
    LLVMBitReader
    LLVMBitWriter
    LLVMBitstreamReader
    LLVMCFGuard
    LLVMCFIVerify
    LLVMCodeGen
    LLVMCore
    LLVMCoroutines
    LLVMCoverage
    LLVMDWARFLinker
    LLVMDWARFLinkerParallel
    LLVMDWP
    LLVMDebugInfoCodeView
    LLVMDebugInfoDWARF
    LLVMDebugInfoGSYM
    LLVMDebugInfoLogicalView
    LLVMDebugInfoMSF
    LLVMDebugInfoPDB
    LLVMDebuginfod
    LLVMDemangle
    LLVMDiff
    LLVMDlltoolDriver
    LLVMExecutionEngine
    LLVMExegesis
    LLVMExtensions
    LLVMFileCheck
    LLVMFrontendHLSL
    LLVMFrontendOpenACC
    LLVMFrontendOpenMP
    LLVMFuzzMutate
    LLVMFuzzerCLI
    LLVMGlobalISel
    LLVMIRPrinter
    LLVMIRReader
    LLVMInstCombine
    LLVMInstrumentation
    LLVMInterfaceStub
    LLVMInterpreter
    LLVMJITLink
    LLVMLTO
    LLVMLibDriver
    LLVMLineEditor
    LLVMLinker
    LLVMMC
    LLVMMCA
    LLVMMCDisassembler
    LLVMMCJIT
    LLVMMCParser
    LLVMMIRParser
    LLVMObjCARCOpts
    LLVMObjCopy
    LLVMObject
    LLVMObjectYAML
    LLVMOption
    LLVMOrcJIT
    LLVMOrcShared
    LLVMOrcTargetProcess
    LLVMPasses
    LLVMProfileData
    LLVMRemarks
    LLVMRuntimeDyld
    LLVMScalarOpts
    LLVMSelectionDAG
    LLVMSupport
    LLVMSymbolize
    LLVMTableGen
    LLVMTableGenGlobalISel
    LLVMTarget
    LLVMTargetParser
    LLVMTextAPI
    LLVMTransformUtils
    LLVMVectorize
    LLVMWebAssemblyAsmParser
    LLVMWebAssemblyCodeGen
    LLVMWebAssemblyDesc
    LLVMWebAssemblyDisassembler
    LLVMWebAssemblyInfo
    LLVMWebAssemblyUtils
    LLVMWindowsDriver
    LLVMWindowsManifest
    LLVMXRay
    LLVMipo
    MLIRAMDGPUDialect
    MLIRAMDGPUToROCDL
    MLIRAMXDialect
    MLIRAMXToLLVMIRTranslation
    MLIRAMXTransforms
    MLIRAffineAnalysis
    MLIRAffineDialect
    MLIRAffineToStandard
    MLIRAffineTransformOps
    MLIRAffineTransforms
    MLIRAffineUtils
    MLIRAnalysis
    MLIRArithAttrToLLVMConversion
    MLIRArithDialect
    MLIRArithToLLVM
    MLIRArithToSPIRV
    MLIRArithTransforms
    MLIRArithUtils
    MLIRArmNeon2dToIntr
    MLIRArmNeonDialect
    MLIRArmNeonToLLVMIRTranslation
    MLIRArmSVEDialect
    MLIRArmSVEToLLVMIRTranslation
    MLIRArmSVETransforms
    MLIRAsmParser
    MLIRAsyncDialect
    MLIRAsyncToLLVM
    MLIRAsyncTransforms
    MLIRBufferizationDialect
    MLIRBufferizationToMemRef
    MLIRBufferizationTransformOps
    MLIRBufferizationTransforms
    MLIRBytecodeReader
    MLIRBytecodeWriter
    MLIRCAPIAsync
    MLIRCAPIControlFlow
    MLIRCAPIConversion
    MLIRCAPIDebug
    MLIRCAPIFunc
    MLIRCAPIGPU
    MLIRCAPIIR
    MLIRCAPIInterfaces
    MLIRCAPILLVM
    MLIRCAPILinalg
    MLIRCAPIMLProgram
    MLIRCAPIPDL
    MLIRCAPIQuant
    MLIRCAPIRegisterEverything
    MLIRCAPISCF
    MLIRCAPIShape
    MLIRCAPISparseTensor
    MLIRCAPITensor
    MLIRCAPITransformDialect
    MLIRCAPITransforms
    MLIRCallInterfaces
    MLIRCastInterfaces
    MLIRComplexDialect
    MLIRComplexToLLVM
    MLIRComplexToLibm
    MLIRComplexToStandard
    MLIRControlFlowDialect
    MLIRControlFlowInterfaces
    MLIRControlFlowToLLVM
    MLIRControlFlowToSPIRV
    MLIRCopyOpInterface
    MLIRDLTIDialect
    MLIRDataLayoutInterfaces
    MLIRDerivedAttributeOpInterface
    MLIRDestinationStyleOpInterface
    MLIRDialect
    MLIRDialectUtils
    MLIREmitCDialect
    MLIRExecutionEngineUtils
    MLIRFromLLVMIRTranslationRegistration
    MLIRFuncDialect
    MLIRFuncToLLVM
    MLIRFuncToSPIRV
    MLIRFuncTransforms
    MLIRGPUOps
    MLIRGPUToGPURuntimeTransforms
    MLIRGPUToNVVMTransforms
    MLIRGPUToROCDLTransforms
    MLIRGPUToSPIRV
    MLIRGPUToVulkanTransforms
    MLIRGPUTransformOps
    MLIRGPUTransforms
    MLIRIR
    MLIRIndexDialect
    MLIRIndexToLLVM
    MLIRInferIntRangeCommon
    MLIRInferIntRangeInterface
    MLIRInferTypeOpInterface
    MLIRLLVMCommonConversion
    MLIRLLVMDialect
    MLIRLLVMIRToLLVMTranslation
    MLIRLLVMIRTransforms
    MLIRLLVMToLLVMIRTranslation
    MLIRLinalgAnalysis
    MLIRLinalgDialect
    MLIRLinalgToLLVM
    MLIRLinalgToStandard
    MLIRLinalgTransformOps
    MLIRLinalgTransforms
    MLIRLinalgUtils
    MLIRLoopLikeInterface
    MLIRLspServerLib
    MLIRLspServerSupportLib
    MLIRMLProgramDialect
    MLIRMaskableOpInterface
    MLIRMaskingOpInterface
    MLIRMathDialect
    MLIRMathToFuncs
    MLIRMathToLLVM
    MLIRMathToLibm
    MLIRMathToSPIRV
    MLIRMathTransforms
    MLIRMemRefDialect
    MLIRMemRefToLLVM
    MLIRMemRefToSPIRV
    MLIRMemRefTransformOps
    MLIRMemRefTransforms
    MLIRMemRefUtils
    MLIRMlirOptMain
    MLIRNVGPUDialect
    MLIRNVGPUToNVVM
    MLIRNVGPUTransforms
    MLIRNVGPUUtils
    MLIRNVVMDialect
    MLIRNVVMToLLVMIRTranslation
    MLIROpenACCDialect
    MLIROpenACCToLLVM
    MLIROpenACCToLLVMIRTranslation
    MLIROpenACCToSCF
    MLIROpenMPDialect
    MLIROpenMPToLLVM
    MLIROpenMPToLLVMIRTranslation
    MLIROptLib
    MLIRPDLDialect
    MLIRPDLInterpDialect
    MLIRPDLLAST
    MLIRPDLLCodeGen
    MLIRPDLLODS
    MLIRPDLToPDLInterp
    MLIRParallelCombiningOpInterface
    MLIRParser
    MLIRPass
    MLIRPresburger
    MLIRQuantDialect
    MLIRQuantUtils
    MLIRROCDLDialect
    MLIRROCDLToLLVMIRTranslation
    MLIRReconcileUnrealizedCasts
    MLIRReduce
    MLIRReduceLib
    MLIRRewrite
    MLIRRuntimeVerifiableOpInterface
    MLIRSCFDialect
    MLIRSCFToControlFlow
    MLIRSCFToGPU
    MLIRSCFToOpenMP
    MLIRSCFToSPIRV
    MLIRSCFTransformOps
    MLIRSCFTransforms
    MLIRSCFUtils
    MLIRSPIRVBinaryUtils
    MLIRSPIRVConversion
    MLIRSPIRVDeserialization
    MLIRSPIRVDialect
    MLIRSPIRVModuleCombiner
    MLIRSPIRVSerialization
    MLIRSPIRVToLLVM
    MLIRSPIRVTransforms
    MLIRSPIRVTranslateRegistration
    MLIRSPIRVUtils
    MLIRShapeDialect
    MLIRShapeOpsTransforms
    MLIRShapeToStandard
    MLIRShapedOpInterfaces
    MLIRSideEffectInterfaces
    MLIRSparseTensorDialect
    MLIRSparseTensorPipelines
    MLIRSparseTensorTransforms
    MLIRSparseTensorUtils
    MLIRSupport
    MLIRSupportIndentedOstream
    MLIRTableGen
    MLIRTargetCpp
    MLIRTargetLLVMIRExport
    MLIRTargetLLVMIRImport
    MLIRTblgenLib
    MLIRTensorDialect
    MLIRTensorInferTypeOpInterfaceImpl
    MLIRTensorTilingInterfaceImpl
    MLIRTensorToLinalg
    MLIRTensorToSPIRV
    MLIRTensorTransforms
    MLIRTensorUtils
    MLIRTilingInterface
    MLIRToLLVMIRTranslationRegistration
    MLIRTosaDialect
    MLIRTosaToArith
    MLIRTosaToLinalg
    MLIRTosaToSCF
    MLIRTosaToTensor
    MLIRTosaTransforms
    MLIRTransformDialect
    MLIRTransformDialectTransforms
    MLIRTransformDialectUtils
    MLIRTransformUtils
    MLIRTransforms
    MLIRTranslateLib
    MLIRVectorDialect
    MLIRVectorInterfaces
    MLIRVectorToGPU
    MLIRVectorToLLVM
    MLIRVectorToSCF
    MLIRVectorToSPIRV
    MLIRVectorTransformOps
    MLIRVectorTransforms
    MLIRVectorUtils
    MLIRViewLikeInterface
    MLIRX86VectorDialect
    MLIRX86VectorToLLVMIRTranslation
    MLIRX86VectorTransforms)

set_target_properties(MlirOptTemplate PROPERTIES LINK_FLAGS "-s ENVIRONMENT='web' -s EXIT_RUNTIME=1 -s EXPORT_ES6=1 -s MODULARIZE=1 -s LLD_REPORT_UNDEFINED=1 -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_FUNCTIONS=_main,_free,_malloc -s EXPORTED_RUNTIME_METHODS=ccall,cwrap,FS,PROXYFS,allocateUTF8,FS_createPath,FS_createDataFile,FS_createPreloadedFile,addRunDependency,removeRunDependency,callMain -s DEFAULT_LIBRARY_FUNCS_TO_INCLUDE=\$Browser -s LZ4=1 -s STACK_SIZE=5MB -s DEFAULT_PTHREAD_STACK_SIZE=2MB -s MAXIMUM_MEMORY=4GB -s WASM_BIGINT=1 -lproxyfs.js")
